language-server/src/tests/snapshots/gleam_language_server__tests__action__merge_case_branch_with_complex_bodies_3.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn go(n: Int) {\n  case n {\n    1 -> go(n - 1)\n    2 -> go(n - 1)\n    _ -> 10\n  }\n}"
---
----- BEFORE ACTION
pub fn go(n: Int) {
  case n {
    1 -> go(n - 1)
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    2 -> go(n - 1)
▔▔▔▔↑             
    _ -> 10
  }
}


----- AFTER ACTION
pub fn go(n: Int) {
  case n {
    1 | 2 -> go(n - 1)
    _ -> 10
  }
}
