language-server/src/tests/snapshots/gleam_language_server__tests__action__merge_case_branch_with_complex_bodies_4.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn go(n: Int) {\n  case n {\n    1 -> {\n      let a = go(n - 1)\n      a * 10\n    }\n    2 -> {\n      let a = go(n - 1)\n      a * 10\n    }\n    _ -> 10\n  }\n}"
---
----- BEFORE ACTION
pub fn go(n: Int) {
  case n {
    1 -> {
    ▔▔▔▔▔▔
      let a = go(n - 1)
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
      a * 10
▔▔▔▔▔▔▔▔▔▔▔▔
    }
▔▔▔▔▔
    2 -> {
▔▔▔▔↑     
      let a = go(n - 1)
      a * 10
    }
    _ -> 10
  }
}


----- AFTER ACTION
pub fn go(n: Int) {
  case n {
    1 | 2 -> {
      let a = go(n - 1)
      a * 10
    }
    _ -> 10
  }
}
