language-server/src/tests/snapshots/gleam_language_server__tests__action__merge_case_branch_with_todo_keeps_the_non_todo_body_1.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn go(n: Int) {\n  case n {\n    1 -> todo\n    2 -> todo\n    3 -> n * 2\n    _ -> todo\n  }\n  }"
---
----- BEFORE ACTION
pub fn go(n: Int) {
  case n {
    1 -> todo
    ▔▔▔▔▔▔▔▔▔
    2 -> todo
▔▔▔▔▔▔▔▔▔▔▔▔▔
    3 -> n * 2
▔▔▔▔↑         
    _ -> todo
  }
  }


----- AFTER ACTION
pub fn go(n: Int) {
  case n {
    1 | 2 | 3 -> n * 2
    _ -> todo
  }
  }
