language-server/src/tests/snapshots/gleam_language_server__tests__action__merge_case_branch_works_with_existing_alternative_patterns.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn go(result) {\n  case result {\n    [] | [_, _, ..]-> todo\n    [_] -> todo\n    _ -> 2\n  }\n}"
---
----- BEFORE ACTION
pub fn go(result) {
  case result {
    [] | [_, _, ..]-> todo
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    [_] -> todo
▔▔▔▔↑          
    _ -> 2
  }
}


----- AFTER ACTION
pub fn go(result) {
  case result {
    [] | [_, _, ..] | [_] -> todo
    _ -> 2
  }
}
