language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_argument_adds_patterns_for_internal_type_inside_module_where_it_is_defined.snap
---
source: language-server/src/tests/action.rs
expression: "\n@internal\npub type Wibble {\n  Wibble(Int)\n  Wobble(String)\n}\n\npub fn main(thing: Wibble) {}\n"
---
----- BEFORE ACTION

@internal
pub type Wibble {
  Wibble(Int)
  Wobble(String)
}

pub fn main(thing: Wibble) {}
            ↑                


----- AFTER ACTION

@internal
pub type Wibble {
  Wibble(Int)
  Wobble(String)
}

pub fn main(thing: Wibble) {
  case thing {
    Wibble(int) -> todo
    Wobble(string) -> todo
  }
}
