language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_argument_available_for_internal_type_defined_in_current_module.snap
---
source: language-server/src/tests/action.rs
expression: "\n@internal\npub type Wibble {\n  Wobble(label: Int)\n}\n\npub fn main(arg: Wibble) {\n  todo\n}\n"
---
----- BEFORE ACTION

@internal
pub type Wibble {
  Wobble(label: Int)
}

pub fn main(arg: Wibble) {
            ▔▔▔▔▔↑        
  todo
}


----- AFTER ACTION

@internal
pub type Wibble {
  Wobble(label: Int)
}

pub fn main(arg: Wibble) {
  let Wobble(label:) = arg
  todo
}
